plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'
}

android {
    namespace = "com.usharik.app"
    compileSdkVersion = 36
    defaultConfig {
        applicationId = "com.usharik.app"
        minSdkVersion = 28
        targetSdkVersion = 36
        versionCode = 210
        versionName = "2.10"
        testInstrumentationRunner = "android.support.test.runner.AndroidJUnitRunner"
        buildConfigField "long", "TIMESTAMP", System.currentTimeMillis() + "L"
    }
    buildFeatures {
        buildConfig = true
    }
    buildTypes {
        release {
            minifyEnabled = false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }
    dataBinding {
        enabled = true
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation project(':database')
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'com.google.android.material:material:1.13.0'
    implementation 'androidx.browser:browser:1.9.0'
    implementation 'androidx.vectordrawable:vectordrawable:1.2.0'
    implementation 'androidx.media:media:1.7.1'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.lifecycle:lifecycle-runtime:2.10.0'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    implementation "androidx.lifecycle:lifecycle-common-java8:2.10.0"
    implementation 'io.reactivex.rxjava3:rxjava:3.1.12'
    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
    implementation 'com.google.dagger:dagger:2.57.2'
    implementation 'com.google.dagger:dagger-android:2.57.2'
    implementation 'com.google.dagger:dagger-android-support:2.57.2'
    implementation 'com.google.firebase:firebase-core:21.1.1'
    implementation 'com.google.code.gson:gson:2.13.2'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test:runner:1.7.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
    annotationProcessor 'com.google.dagger:dagger-android-processor:2.57.2'
    annotationProcessor 'com.google.dagger:dagger-compiler:2.57.2'
}
